Added direct links to edit files on Binder

--- a/OSeMOSYS.ipynb
+++ b/OSeMOSYS.ipynb
@@ -41,7 +41,7 @@
     "For example, you could edit the `CapitalCost` of technologies of the `year` model by editing \n",
     "the respective [CSV file](model/year/data/CapitalCost.csv).\n",
     "\n",
-    "We use the multi-year model called `year`, which you can find in the [`model/year/data`](model/year/data) folder.\n",
+    "We use the multi-year model called `year`, which you can find in the [`../edit/model/year/data`](model/year/data) folder.\n",
     "\n",
     "## Units\n",
     "\n",
@@ -66,20 +66,20 @@
     "### Sets\n",
     "\n",
     "Sets are used to define the model structure. For example \n",
-    "[YEAR](model/year/data/YEAR.csv), \n",
-    "[TIMESLICE](model/year/data/TIMESLICE.csv), \n",
-    "[TECHNOLOGY](model/year/data/TECHNOLOGY.csv), \n",
-    "[MODE_OF_OPERATION](model/year/data/MODE_OF_OPERATION.csv), \n",
-    "[REGION](model/year/data/REGION.csv), \n",
-    "[FUEL](model/year/data/FUEL.csv), \n",
-    "[EMISSION](model/year/data/EMISSION.csv) etc.\n",
+    "[YEAR](../edit/model/year/data/YEAR.csv), \n",
+    "[TIMESLICE](../edit/model/year/data/TIMESLICE.csv), \n",
+    "[TECHNOLOGY](../edit/model/year/data/TECHNOLOGY.csv), \n",
+    "[MODE_OF_OPERATION](../edit/model/year/data/MODE_OF_OPERATION.csv), \n",
+    "[REGION](../edit/model/year/data/REGION.csv), \n",
+    "[FUEL](../edit/model/year/data/FUEL.csv), \n",
+    "[EMISSION](../edit/model/year/data/EMISSION.csv) etc.\n",
     "\n",
     "_Sets define the basic model structure_\n",
     "\n",
     "### Parameters (\"inputs\")\n",
     "\n",
     "Parameters define the numerical inputs to the model such as costs, demands, constraints for capacity etc.\n",
-    "Parameters are indexed over the sets, for example [`CapitalCost`](model/year/data/CapitalCost.csv). \n",
+    "Parameters are indexed over the sets, for example [`CapitalCost`](../edit/model/year/data/CapitalCost.csv). \n",
     "This represents an array of costs for every region, technology and year.\n",
     "\n",
     "_Parameters are the inputs that the modeller needs to provide to the model._\n",
@@ -206,7 +206,7 @@
     "`SOLPV` | `ResidualCapacity(2022)` | 2\n",
     "`WIND`| `ResidualCapacity(2022)` | 3\n",
     "\n",
-    "Solar PV and Wind have the following capacity factors defined in the file `CapacityFactor.csv`:\n",
+    "Solar PV and Wind have the following capacity factors defined in the file [`CapacityFactor.csv`](../edit/model/year/data/CapacityFactor.csv:\n",
     "\n",
     "Timeslice | SOLPV | WIND\n",
     ":--|:--|--:\n",
@@ -285,8 +285,8 @@
     "Try editing some of the model parameters and see what happens to the results of the model.\n",
     "\n",
     "Start with:\n",
-    "1. Increasing or decreasing demand [`SpecifiedAnnualDemand`](model/year/data/SpecifiedAnnualDemand.csv)\n",
-    "2. Play with changing the [`CapitalCost`](model/year/data/CapitalCost.csv) of the generation technologies\n",
+    "1. Increasing or decreasing demand [`SpecifiedAnnualDemand`](../edit/model/year/data/SpecifiedAnnualDemand.csv)\n",
+    "2. Play with changing the [`CapitalCost`](../edit/model/year/data/CapitalCost.csv) of the generation technologies\n",
     "3. Try making the fuels more expensive by changing [`VariableCost.csv`](../edit/model/year/data/VariableCost.csv)"
    ]
   },
@@ -518,14 +518,14 @@
     "\n",
     "To add a new technology into the OSeMOSYS model stored you will need to edit the following files: \n",
     "\n",
-    "  - `InputActivityRatio.csv`, \n",
-    "  - `OutputActivityRatio.csv`,\n",
-    "  - `CapacityFactor.csv`\n",
-    "  - `OperationalLife.csv`, \n",
-    "  - `ResidualCapacity.csv`, \n",
-    "  - `TECHNOLOGY.csv`, \n",
-    "  - `FixedCost.csv` and \n",
-    "  - `VariableCost.csv`."
+    "  - [`InputActivityRatio.csv`](../edit/model/year/data/InputActivityRatio.csv), \n",
+    "  - [`OutputActivityRatio.csv`](../edit/model/year/data/OutputActivityRatio.csv),\n",
+    "  - [`CapacityFactor.csv`](../edit/model/year/data/CapacityFactor.csv)\n",
+    "  - [`OperationalLife.csv`](../edit/model/year/data/OperationalLife.csv), \n",
+    "  - [`ResidualCapacity.csv`](../edit/model/year/data/ResidualCapacity.csv), \n",
+    "  - [`TECHNOLOGY.csv`](../edit/model/year/data/TECHNOLOGY.csv), \n",
+    "  - [`FixedCost.csv`](../edit/model/year/data/FixedCost.csv) and \n",
+    "  - [`VariableCost.csv`](../edit/model/year/data/VariableCost.csv)."
    ]
   },
   {
